--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ a:hover {
 #all {
 	height: 80px;
 	margin-top: -50px;
-	margin-left: -196px;
-	width: 391px;
+	margin-left: -163px;
+	width: 325px;
 	text-align: center;
 	position: absolute;
 	white-space: nowrap;
@@ -35,12 +35,12 @@ a:hover {
 }
 
 .ceci-nest-pas .image {
-	background: url(ceci_nest_pas_391.gif) no-repeat;
+	background: url('ceci_nest_pas_325.gif') no-repeat;
 	height: 46px;
 	margin-top: 6px;
 	margin-left: 1px;
 	margin-bottom: 12px;
-	width: 391px;
+	width: 325px;
 }
 
 html.wf-learningcurve-n4-active.wf-active .ceci-nest-pas .text {
@@ -54,7 +54,7 @@ html.wf-learningcurve-n4-active.wf-active .ceci-nest-pas .image {
 .links {
 	height: 20px;
 	margin: 10px auto;
-	padding-right: 15px;
+	padding-right: 13px;
 	display: block;
 	width: 230px;
 }
@@ -63,7 +63,6 @@ html.wf-learningcurve-n4-active.wf-active .ceci-nest-pas .image {
 	display: block;
 	float: left;
 	line-height: 16px;
-
 }
 
 .links .seperator {
